deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vyenfita
  labels:
    name: vyenfita
    app.kubernetes.io/name: vyenfita
    app.kubernetes.io/part-of: vyenfita-platform
